# wifichecker

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  build_flatpak_local.sh  io.github.danst0.wifichecker.yml  publish_flatpak.sh
.github/workflows/: ci.yml
data/: io.github.danst0.wifichecker.desktop  io.github.danst0.wifichecker.metainfo.xml
doc/: crates.js  help.html  settings.html  src-files.js
doc/search.index/: root.js
doc/search.index/crateNames/: 6a7d116ea3ce.js
doc/src/x/: null.html
doc/x/: all.html  index.html
src/: main.rs  window.rs
src/heatmap/: interpolation.rs  mod.rs
src/models/: access_point.rs  floor.rs  measurement.rs  mod.rs  project.rs  settings.rs
src/persistence/: json_store.rs  mod.rs  settings_store.rs
src/services/: iperf_client.rs  mod.rs  nm_dbus.rs  smb_tester.rs  wifi_scanner.rs
src/utils/: flatpak.rs  mod.rs
src/widgets/: floor_plan_view.rs  legend_bar.rs  measurement_panel.rs  mod.rs  settings_dialog.rs
