[package]
name = "wifichecker"
version = "0.0.8"
edition = "2024"
license = "MIT"
authors = ["Dr. Daniel Dumke"]

[dependencies]
gtk4 = { version = "0.9", features = ["v4_12"] }
libadwaita = { version = "0.7", features = ["v1_4"] }
cairo-rs = { version = "0.20", features = ["png"] }
gdk-pixbuf = "0.20"
zbus = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
async-channel = "2"
anyhow = "1"
log = "0.4"
env_logger = "0.11"

[profile.release]
opt-level = 3
lto = true
